<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SensorTagRx</string>
    
    <string name="label_accelerometer">Accelerometer</string>
    <string name="label_magnetometer">Magnetometer</string>
    <string name="label_gyroscope">Gyroscope</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="enabling_sensors">Enabling sensors</string>
    <string name="enabling_notifications">Enabling notifications</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="error_fs_not_writable">Can\'t write log file. Filesystem not writable.</string>

    <string name="unknown_device">Unknown device</string>
    <!-- <string name="unknown_characteristic">Unknown characteristic</string> -->
    <!-- <string name="unknown_service">Unknown service</string> -->

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
</resources>
